k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: test-task-counter
  name: test-task-counter
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: test-task-counter
    spec:
      containers:
      - name: web
        image: gcr.io/test-project-driveback/test-task-counter:v1.0.0
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
