k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-task-counter
  labels:
    last_updated: "1"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: test-task-counter
          servicePort: 80
